Initial data engineering CI pipeline agin

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,3 +48,6 @@ jobs:
 
     - name: Run data tests
       run: pytest tests/
+    - name: Set PYTHONPATH
+      run: |
+        echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
