--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,10 +44,15 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+  run: |
+    pip install -r requirements.txt
+    pip install pytest
 
-    - name: Run data tests
-      run: pytest tests/
     - name: Set PYTHONPATH
       run: |
         echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
+    
+    - name: Run tests
+      run: |
+        pytest tests/
+    
